@@ -126,6 +126,9 @@ $defcfg = array( '$config_version' => array( 'name' => _("Config File Version"),
                  '$useSendmail' => array( 'name' => _("Use Sendmail Binary"),
                                           'type' => SMOPT_TYPE_BOOLEAN,
                                           'comment' => _("Choose &quot;no&quot; for SMTP") ),
+                 '$sendmail_args' => array( 'name' => _("Sendmail Arguments"),
+                                            'type' => SMOPT_TYPE_STRING,
+                                            'size' => 40 ),
                  '$sendmail_path' => array( 'name' => _("Sendmail Path"),
                                             'type' => SMOPT_TYPE_STRING,
                                             'size' => 40 ),
